--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
   script:
    - pip install -r requirements.txt
    - pip install -r test-requirements.txt
-   - pytest --cov=nhentai-api
+   - pytest --cov=nhentai_api
 
 test-3.6:
   extends: .tests
